# feed-this-much

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  NOTHING  README.md  compose.yml  package-lock.json  pyproject.toml  webapp_text_copy.rtf
.githooks/: pre-commit
.github/workflows/: build-and-deploy.yml  build.yml  deploy.yml  lint-and-test.yml  lint.yml  test.yml
backend/: gunicorn.conf.py  manage.py  run.sh
backend/feed_this_much/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
backend/feed_this_much/basic/: serializers.py  views.py
backend/feed_this_much/feed_this_much_app/: serializers.py  views.py
backend/feed_this_much/feeding/: calorie_calculator.py  models.py  views.py
backend/feed_this_much/food/: admin.py  apps.py  models.py  serializers.py  views.py
backend/feed_this_much/food/migrations/: 0001_initial.py  0002_alter_userfood_weight_per_packet_unit_and_more.py  0003_userfood_weight_per_serving_unit_and_more.py  0004_remove_userfood_weight_per_serving_and_more.py
backend/feed_this_much/pets/: apps.py  models.py  serializers.py  tests.py  views.py
backend/feed_this_much/pets_info/: apps.py  serializers.py  views.py
backend/feed_this_much/plan/: admin.py  apps.py  calorie_calculator.py  models.py  serializers.py  views.py
backend/pets_info/: apps.py  models.py  serializers.py  views.py
backend/pets_info/migrations/: 0003_pet_user.py
backend/tests/: test_dummy.py
docs/: CNAME  about.markdown  designspec.txt  index.markdown
frontend/feed-this-much-client/: package-lock.json  package.json  tsconfig.json
(+64 files in other folders)
